//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  role String [not null]
  NUSId String [unique, not null]
  username String [unique, not null]
  password String [not null]
  email String [unique, not null]
  faculty String
  department String
  academicPlan String
  primaryDegree String
  secondDegree String
  secondMajor String
  programme String
  position String
  minor String[] [not null]
  interests String[] [not null]
  avatar String
  Post Post [not null]
  Comment Comment [not null]
  Event Event [not null]
  NotificationFrom Notification [not null]
  NotificationTo Notification [not null]
  ModulePlan ModulePlan [not null]
  GPATable GPATable [not null]
}

Table Post {
  id Int [pk, increment]
  title String [not null]
  dateCreated DateTime [not null]
  relatedMajor String
  category String [not null]
  content String [not null]
  upload_file String[] [not null]
  tags String[] [not null]
  author User [not null]
  PostAuthorId Int [not null]
  like String[] [not null]
  likeAmount Int [not null, default: 0]
  Comment Comment [not null]
}

Table Comment {
  id Int [pk, increment]
  dateCreated DateTime [not null]
  author User [not null]
  content String [not null]
  post Post
  authorId Int [not null]
  ModulePlan ModulePlan
  modulePlanId String
  postId Int
}

Table Programme {
  id Int [pk, increment]
  name String [not null]
  combination String[] [not null]
  commonModule CommonModuleGroup [not null]
  coreModule CoreModuleGroup [not null]
  commonModuleGroupId Int [not null]
}

Table CoreModuleGroup {
  id Int [pk, increment]
  name String [not null]
  faculty String
  rules Json [not null]
  programme Programme [not null]
}

Table CommonModuleGroup {
  id Int [pk, increment]
  name String [not null]
  faculty String [not null]
  rules Json [not null]
  Programme Programme [not null]
}

Table Module {
  id Int [pk, increment]
  acadYear String [not null]
  preclusion String
  description String [not null]
  title String [not null]
  department String [not null]
  faculty String [not null]
  workload String
  attributes Json
  gradingBasisDescription String
  additionalInformation String
  prerequisiteRule String
  prerequisite String
  preclusionRule String
  corequisiteRule String
  prerequisiteAdvisory String
  moduleCredit String [not null]
  moduleCode String [not null]
  prereqTree Json
  aliases String[] [not null]
  corequisite String
  fulfillRequirements String[] [not null]
}

Table Event {
  id Int [pk, increment]
  nanoid String [unique, not null]
  name String [not null]
  date String [not null]
  time String [not null]
  category String [not null]
  priority String [not null]
  user User [not null]
  userId Int [not null]
}

Table Notification {
  id Int [pk, increment]
  timestamp DateTime [not null]
  content String [not null]
  type String [not null]
  author User [not null]
  userIdFrom Int [not null]
  target User [not null]
  userIdTo Int [not null]
  hiddenValue Json
}

Table GPATable {
  id Int [pk, increment]
  content Json [not null]
  user User [not null]
  userId Int [not null]
}

Table ModulePlan {
  id Int [pk, increment]
  nanoid String [unique, not null]
  owner User [not null]
  academicPlan Json
  gradRequirementsDict Json
  semesterModulesDict Json
  isDefault Boolean [not null, default: false]
  status String
  userId Int [not null]
  AdminComment Comment [not null]
}

Ref: Post.PostAuthorId > User.id

Ref: Comment.authorId > User.id

Ref: Comment.postId > Post.id

Ref: Comment.modulePlanId > ModulePlan.nanoid

Ref: Programme.commonModuleGroupId > CommonModuleGroup.id

Ref: Event.userId > User.id

Ref: Notification.userIdFrom > User.id

Ref: Notification.userIdTo > User.id

Ref: GPATable.userId > User.id

Ref: ModulePlan.userId > User.id